project(Base VERSION 0.1)

set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})

file(GLOB_RECURSE SRC ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.h *.ui)
source_group_by_dir(SRC)

add_library(${PROJECT_NAME} SHARED ${SRC})
target_include_directories(${PROJECT_NAME}
    PUBLIC ${PYTHON_INCLUDE_DIRS}
    ${PYCXX_INCLUDE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/Exception
    ${CMAKE_CURRENT_SOURCE_DIR}/Python
    ${CMAKE_CURRENT_SOURCE_DIR}/Core
)
target_link_libraries(${PROJECT_NAME}
    PUBLIC ${PYTHON_LIBRARIES}
)

target_compile_definitions(${PROJECT_NAME} PUBLIC -DLIB_Base_EXPORTS)

# set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
# set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Base)